add dependencies with role aws_setup_credentials

--- a/roles/awsconfig_multiregion_cloudtrail/tasks/main.yml
+++ b/roles/awsconfig_multiregion_cloudtrail/tasks/main.yml
@@ -45,3 +45,7 @@
           when: not result.changed
 
       when: operation == 'delete'
+
+  module_defaults:
+    group/aws:
+      "{{ aws_role_credentials }}"
