--- a/roles/connectivity_troubleshooter_local/defaults/main.yml
+++ b/roles/connectivity_troubleshooter_local/defaults/main.yml
@@ -1,2 +1,4 @@
 ---
 # defaults file for roles/connectivity_troubleshooter_local
+connectivity_troubleshooter_local_source_port_range:
+connectivity_troubleshooter_local_destination_port:
