--- a/tests/integration/targets/test_connectivity_troubleshooter/tasks/cleanup_destination_peering.yml
+++ b/tests/integration/targets/test_connectivity_troubleshooter/tasks/cleanup_destination_peering.yml
@@ -1,12 +1,12 @@
 ---
-- name: Gater information about VPC 1
+- name: Gather information about VPC 1
   ec2_vpc_net_info:
     filters:
       tag:Name: "{{ vpc_name }}-1"
   register: __vpc_info_1
   ignore_errors: true
 
-- name: Gater information about VPC 2
+- name: Gather information about VPC 2
   ec2_vpc_net_info:
     filters:
       tag:Name: "{{ vpc_name }}-2"
@@ -39,7 +39,7 @@
   ignore_errors: true
   loop: '{{ vpc_peering_connection_ids }}'
 
-- name: Gater information about EC2 instances
+- name: Gather information about EC2 instances
   ec2_instance_info:
     filters:
       vpc-id: "{{ vpc_id_1 }}"
@@ -78,7 +78,7 @@
     vpc_id: "{{ vpc_id_1 }}"
   ignore_errors: true
 
-- name: Gater information about VPC route tables
+- name: Gather information about VPC route tables
   ec2_vpc_route_table_info:
     filters:
       vpc-id: "{{ vpc_id_1 }}"
@@ -102,7 +102,7 @@
     state: absent
   ignore_errors: true
 
-- name: Gater information about VPC 2
+- name: Gather information about VPC 2
   ec2_vpc_net_info:
     filters:
       tag:Name: "{{ vpc_name }}-2"
@@ -112,7 +112,7 @@
 - set_fact:
     vpc_id_2: "{{ __vpc_info_2.vpcs.0.vpc_id }}"
 
-- name: Gater information about EC2 instances
+- name: Gather information about EC2 instances
   ec2_instance_info:
     filters:
       vpc-id: "{{ vpc_id_2 }}"
@@ -152,7 +152,7 @@
     vpc_id: "{{ vpc_id_2 }}"
   ignore_errors: true
 
-- name: Gater information about VPC route tables
+- name: Gather information about VPC route tables
   ec2_vpc_route_table_info:
     filters:
       vpc-id: "{{ vpc_id_2 }}"
