Cleanup empty files
Signed-off-by: Alina Buzachis <abuzachis@redhat.com>

--- a/roles/connectivity_troubleshooter/tasks/main.yml
+++ b/roles/connectivity_troubleshooter/tasks/main.yml
@@ -1,46 +1,58 @@
 ---
 # tasks file for roles/connectivity_troubleshooter
+- block:
+  - include_role:
+      name: connectivity_troubleshooter_validate
+    vars:
+      connectivity_troubleshooter_validate_destination_ip: "{{ connectivity_troubleshooter_destination_ip }}"
+      connectivity_troubleshooter_validate_destination_port: "{{ connectivity_troubleshooter_destination_port }}"
+      connectivity_troubleshooter_validate_source_ip: "{{ connectivity_troubleshooter_source_ip }}"
+      connectivity_troubleshooter_validate_source_vpc: "{{ connectivity_troubleshooter_source_vpc }}"
 
-- fail:
-    msg: "Next hop type '{{ next_hop }}' is not supported by this role"
-  when: "next_hop != 'local' and not next_hop.startswith('nat-') and not next_hop.startswith('igw-') and not next_hop.startswith('pcx-')"
+  - fail:
+      msg: "Next hop type '{{ next_hop }}' is not supported by this role"
+    when: "next_hop != 'local' and not next_hop.startswith('nat-') and not next_hop.startswith('igw-') and not next_hop.startswith('pcx-')"
 
-- include_role:
-    name: cloud.aws_roles.connectivity_troubleshooter_local
-  vars:
-    connectivity_troubleshooter_local_destination_ip: "{{ connectivity_troubleshooter_destination_ip }}"
-    connectivity_troubleshooter_local_destination_port: "{{ connectivity_troubleshooter_destination_port }}"
-    connectivity_troubleshooter_local_source_ip: "{{ connectivity_troubleshooter_source_ip}}"
-    connectivity_troubleshooter_local_destination_vpc: "{{ connectivity_troubleshooter_destination_vpc }}"
-    connectivity_troubleshooter_local_source_port_range: "{{ connectivity_troubleshooter_source_port_range }}"
-  when: "'local' == next_hop"
+  - include_role:
+      name: cloud.aws_roles.connectivity_troubleshooter_local
+    vars:
+      connectivity_troubleshooter_local_destination_ip: "{{ connectivity_troubleshooter_destination_ip }}"
+      connectivity_troubleshooter_local_destination_port: "{{ connectivity_troubleshooter_destination_port }}"
+      connectivity_troubleshooter_local_source_ip: "{{ connectivity_troubleshooter_source_ip}}"
+      connectivity_troubleshooter_local_destination_vpc: "{{ connectivity_troubleshooter_destination_vpc }}"
+      connectivity_troubleshooter_local_source_port_range: "{{ connectivity_troubleshooter_source_port_range }}"
+    when: "'local' == next_hop"
 
-- include_role:
-    name: cloud.aws_roles.connectivity_troubleshooter_igw
-  vars:
-    connectivity_troubleshooter_igw_destination_ip: "{{ connectivity_troubleshooter_destination_ip }}"
-    connectivity_troubleshooter_igw_destination_port: "{{ connectivity_troubleshooter_destination_port }}"
-    connectivity_troubleshooter_igw_source_ip: "{{ connectivity_troubleshooter_source_ip}}"
-    connectivity_troubleshooter_igw_destination_vpc: "{{ connectivity_troubleshooter_destination_vpc }}"
-    connectivity_troubleshooter_igw_source_vpc: "{{ connectivity_troubleshooter_source_vpc }}"
-    connectivity_troubleshooter_igw_source_port_range: "{{ connectivity_troubleshooter_source_port_range }}"
-  when: "'igw-' in next_hop"
+  - include_role:
+      name: cloud.aws_roles.connectivity_troubleshooter_igw
+    vars:
+      connectivity_troubleshooter_igw_destination_ip: "{{ connectivity_troubleshooter_destination_ip }}"
+      connectivity_troubleshooter_igw_destination_port: "{{ connectivity_troubleshooter_destination_port }}"
+      connectivity_troubleshooter_igw_source_ip: "{{ connectivity_troubleshooter_source_ip}}"
+      connectivity_troubleshooter_igw_destination_vpc: "{{ connectivity_troubleshooter_destination_vpc }}"
+      connectivity_troubleshooter_igw_source_vpc: "{{ connectivity_troubleshooter_source_vpc }}"
+      connectivity_troubleshooter_igw_source_port_range: "{{ connectivity_troubleshooter_source_port_range }}"
+    when: "'igw-' in next_hop"
 
-- include_role:
-    name: cloud.aws_roles.connectivity_troubleshooter_nat
-  vars:
-    connectivity_troubleshooter_nat_destination_ip: "{{ connectivity_troubleshooter_destination_ip }}"
-    connectivity_troubleshooter_nat_destination_port: "{{ connectivity_troubleshooter_destination_port }}"
-    connectivity_troubleshooter_nat_source_ip: "{{ connectivity_troubleshooter_source_ip}}"
-    connectivity_troubleshooter_nat_source_port_range: "{{ connectivity_troubleshooter_source_port_range}}"
-  when: "'nat-' in next_hop"
+  - include_role:
+      name: cloud.aws_roles.connectivity_troubleshooter_nat
+    vars:
+      connectivity_troubleshooter_nat_destination_ip: "{{ connectivity_troubleshooter_destination_ip }}"
+      connectivity_troubleshooter_nat_destination_port: "{{ connectivity_troubleshooter_destination_port }}"
+      connectivity_troubleshooter_nat_source_ip: "{{ connectivity_troubleshooter_source_ip}}"
+      connectivity_troubleshooter_nat_source_port_range: "{{ connectivity_troubleshooter_source_port_range}}"
+    when: "'nat-' in next_hop"
 
-- include_role:
-    name: cloud.aws_roles.connectivity_troubleshooter_peering
-  vars:
-    connectivity_troubleshooter_peering_destination_ip: "{{ connectivity_troubleshooter_destination_ip }}"
-    connectivity_troubleshooter_peering_destination_port: "{{ connectivity_troubleshooter_destination_port }}"
-    connectivity_troubleshooter_peering_source_ip: "{{ connectivity_troubleshooter_source_ip}}"
-    connectivity_troubleshooter_peering_destination_vpc: "{{ connectivity_troubleshooter_destination_vpc }}"
-    connectivity_troubleshooter_peering_source_vpc: "{{ connectivity_troubleshooter_source_vpc }}"
-  when: "'pcx-' in next_hop"
+  - include_role:
+      name: cloud.aws_roles.connectivity_troubleshooter_peering
+    vars:
+      connectivity_troubleshooter_peering_destination_ip: "{{ connectivity_troubleshooter_destination_ip }}"
+      connectivity_troubleshooter_peering_destination_port: "{{ connectivity_troubleshooter_destination_port }}"
+      connectivity_troubleshooter_peering_source_ip: "{{ connectivity_troubleshooter_source_ip}}"
+      connectivity_troubleshooter_peering_destination_vpc: "{{ connectivity_troubleshooter_destination_vpc }}"
+      connectivity_troubleshooter_peering_source_vpc: "{{ connectivity_troubleshooter_source_vpc }}"
+    when: "'pcx-' in next_hop"
+
+  module_defaults:
+    group/aws:
+      "{{ aws_role_credentials }}"
