--- a/roles/ec2_instance_terminate_by_tag/tasks/main.yml
+++ b/roles/ec2_instance_terminate_by_tag/tasks/main.yml
@@ -27,7 +27,7 @@
             msg:
               - "'terminate_protected_instances' is set to True..."
               - "Instances with termination protection enabled will also be terminated..."
-          when: "{{ instance_ids | length }} != 0"
+          when: instance_ids | length != 0
 
         - name: Disable instance termination protection if terminate_protected_instances is true
           amazon.aws.ec2_instance:
@@ -51,4 +51,4 @@
     - debug:
         msg:
           - "Terminated instances successfully -> {{ terminated_instances }}"
-      when: "{{ terminated_instances | length }} != 0"
+      when: terminated_instances | length != 0
