Add 'always' block to handle termination error in case of protected instances

--- a/roles/ec2_instance_terminate_by_tag/tasks/main.yml
+++ b/roles/ec2_instance_terminate_by_tag/tasks/main.yml
@@ -45,6 +45,8 @@
       with_items:
         - "{{ instance_ids }}"
 
+  always:
+
     - name: Create list of terminated instances
       ansible.builtin.set_fact:
         terminated_instances: "{{ terminate_result.results | map(attribute='terminate_success') | list | flatten }}"
