add dependencies with role aws_setup_credentials

--- a/roles/ec2_instance_terminate_by_tag/tasks/main.yml
+++ b/roles/ec2_instance_terminate_by_tag/tasks/main.yml
@@ -54,3 +54,7 @@
         msg:
           - "Terminated instances successfully -> {{ terminated_instances }}"
       when: terminated_instances | length != 0
+
+  module_defaults:
+    group/aws:
+      "{{ aws_role_credentials }}"
