Enable ansible-lint
Signed-off-by: Alina Buzachis <abuzachis@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -7,18 +7,25 @@ deps =
   black >= 22.0, < 23.0
 
 commands =
-  black -v --check --diff {toxinidir}/playbooks
+  black -v --check --diff {toxinidir}/plugins {toxinidir}/tests
+
+[testenv:ansible-lint]
+deps =
+  ansible-lint>=6.7.0
+commands = ansible-lint --profile production --format pep8 --nocolor --strict {toxinidir}/playbooks {toxinidir}/roles {toxinidir}/tests
 
 [testenv:linters]
 deps =
   yamllint
   flake8
   {[testenv:black]deps}
+  {[testenv:ansible-lint]deps}
 
 commands =
-  black -v --check --diff {toxinidir}/playbooks
+  {[testenv:black]commands}
   yamllint {toxinidir}
   flake8 {toxinidir}
+  {[testenv:ansible-lint]commands}
 
 [flake8]
 exclude = .git,.tox,tests/output
