--- a/tox.ini
+++ b/tox.ini
@@ -2,17 +2,22 @@
 minversion = 1.4.2
 skipsdist = True
 
+[testenv]
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
+install_command = pip install {opts} {packages}
+
 [testenv:black]
 deps =
   black >= 22.0, < 23.0
 
 commands =
-  black -v --check --diff {toxinidir}/plugins {toxinidir}/tests
+  black {toxinidir}/plugins {toxinidir}/tests
 
 [testenv:ansible-lint]
 deps =
   ansible-lint>=6.7.0
-commands = ansible-lint --profile production --format pep8 --nocolor --strict {toxinidir}/playbooks {toxinidir}/roles {toxinidir}/tests
+commands = ansible-lint --profile production --format pep8 --nocolor --strict --write {toxinidir}/roles {toxinidir}/tests
 
 [testenv:linters]
 deps =
@@ -22,11 +27,19 @@ deps =
   {[testenv:ansible-lint]deps}
 
 commands =
-  {[testenv:black]commands}
-  yamllint {toxinidir}
+  black -v --check --diff {toxinidir}/plugins {toxinidir}/tests
+  yamllint -s {toxinidir}
   flake8 {toxinidir}
-  {[testenv:ansible-lint]commands}
+  ansible-lint --profile production --format pep8 --nocolor --strict {toxinidir}/roles {toxinidir}/tests
+
+[testenv:py39-sanity]
+deps = ansible
+commands = ansible-test sanity --debug --requirements --local --skip-test future-import-boilerplate --skip-test metaclass-boilerplate --python 3.9
+setenv =
+    HOME = /tmp
 
 [flake8]
 exclude = .git,.tox,tests/output
 ignore = E501, W503, W504, E402
+max-line-length = 160
+builtins = _
